mainPageCss/mainpagestyles.css
/* CSS RESET */

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {

    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline;

}


/* CSS RESET FOR OLDER BROWSERS */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    
    display: block;
}

body {

    line-height: 1;

}

blockquote, q {
    
    quotes: none;
}

blockquote:before, blockquote:after, q:before, q:after {

    content: '';
    content: none;

}

table {
    
    border-collapse: collapse;
    border-spacing: 0;

}

strong, b {

    font-weight: bold;

}

em, i {

    font-style: italic;

}

a img {
    
    border: none;

}

/* END RESET */

/* INDEX PAGE STYLES */

html {

    scroll-behavior: smooth;
    scrollbar-width:none;
    font-family: 'Helvetica Neue',sans-serif;
    color: #000;

}

/* MAIN CONTAINER  */

.main {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: flex-start;
    background-color: #fff;
    margin: 0 auto;
    height: 100vh;
    /* border: 1px solid green; */
}

/* NAV BAR CONTAINER STYLES */

.navBar {
/* NAV BAR CONTAINER PROPERTIES */
    display: flex;
    justify-content: space-around;
    height: 14vh;
    width: 100vw;
    background-color: #fff;
    border-bottom: 2px solid silver;
    /* position: fixed; */
    z-index: 1;

}

.navOptions {
/* NAV BAR BOXES ITEM PROPERTIES*/
    font-size: 1em;
    font-family: 'Helvetica Neue',sans-serif;
    color: #000;
    padding: 0.5em;
    text-decoration: none;
    box-sizing: border-box;
    text-align: center;
    flex-grow: 1;
    height: 100%;    

}

#navLinks {

    align-content: flex-end;
    line-height: 1.5;
    flex-grow: 7;

}

#navLinks:hover, .box-6:hover {

    color: black;
    font-weight: bolder;
    border-bottom: 2px solid orangered;
    padding-top: 2px;
    cursor: pointer;    

}

.box-1 {

    order: 1;
}
.box-2 {

    order: 2;
    
}
.box-3 {

    order: 3;
    
}
.box-4 {

    order: 4;
    
}
.box-5 {

    align-content: center;
    order: 5;  

}

.box-6 {

    font-size: 1.1em;
    font-weight: bold;
    align-content: flex-end;
    line-height: 3;
    order: 6;
    
}

.box-5 img {

    width: 5vw;
    margin-top: 1.6em;
    margin-right: 0.5em;

}


/* NAV BAR MEDIA QUERIES */
@media (max-width: 700px){


#navLinks {

    align-content: flex-end;
    line-height: 1.5;
    flex-grow: 7;
    display: none;

}

#navLinks:hover, .box-6:hover {

    color: black;
    font-weight: bolder;
    border-bottom: 2px solid orangered;
    padding-top: 2px;
    cursor: pointer;    

}
.box-5 {

    align-content: center;
    order: 6;  

}

.box-6 {

    font-size: 2rem;
    font-weight: bold;
    align-content: flex-end;
    line-height: 3;
    order: 5;
    
}

.box-5 img {

    width: 15vw;
    margin-top: 1.6em;
    margin-right: 0.5em;

}

}


/* Welcome Container -------------------*/ 

.welcomeContainer {

    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    height: 86vh;
    width: 100vw;
    /* border: 2px red solid; */

}

.welcomeBox {

    
    font-size: 1em;
    font-family: 'Helvetica Neue',sans-serif;
    color: #000;
    padding: 0.5em;
    width: 50%;
    flex-grow: 1;
    /* border: 1px solid orange; */

}

.wb-1 {

    text-align: center;
    order: 1;

}

.wb-2 {
    
    flex-grow: 5;
    font-size: 1.1em;
    text-align: center;
    align-content: center;
    line-height: 1.5;
    order: 2;

}

.wb-1 img {

    width: 50vw;
    margin-top: 1em;
    margin-right: 0.5em;

}

@media (max-width: 700px){

    .welcomeBox  h1{

        display: none;
    }

    .welcomeBox {

    
        font-size: 1em;
        font-family: 'Helvetica Neue',sans-serif;
        color: #000;
        padding: 0.5em;
        width: 80%;
        flex-grow: 1;
        /* border: 1px solid orange; */
    
    }
    
    .wb-1 {
    
        text-align: center;
        order: 1;
        flex-grow: 1;
    
    }
    
    .wb-2 {
        
        flex-grow: 10;
        font-size: 1.1em;
        text-align: center;
        align-content: center;
        line-height: 1.5;
        order: 2;
    
    }

    .wb-1 img {

        width: 80vw;
        height: 40vh;
    
    }


}

/* SERVICES CONTAINER --------------------- */

.servicesContainer {

    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    width: 100vw;
    height: 75vh;
    margin: 0 auto;
    /* border: 1px solid red; */

}

.servicesBox {

   display: flex;
   flex-direction: column;
   line-height: 1.5;
   height: 50vh;
   width: 25vw;
   margin: 0.5em;
   padding: 0.1em .1em 2em;
   text-align: center;
   overflow: hidden;
   font-family: 'Helvetica Neue',sans-serif;
   background-color:rgba(192,192,192,0.53);
   border: 1px solid silver;

}

.sbx-1 {

    order: 1;

}

.sbx-2 {

    order: 2;

}

.sbx-3 {
    
    order: 3;

}


.servicesBox div {

    flex-grow: 1;
    /* border: 1px solid black */

}

.servicesBox img {

    height: 23vh;
    width: 25vw;
    transition: width 1s;

}

.servicesBox h3 {
    
    text-align: left;
    padding-left: 0.5em;
    font-size: 1.5rem;
    line-height: 4;
    

}

.servicesBox h4 {

    font-size: 1rem;
    line-height: 1;
    text-align: left;
    padding-left: 0.5em;

}

.servicesBox a {

    padding-top: 3em;
    color: #000;
    text-decoration: none;
    

}

.servicesBox a:hover {

    color: black;
    font-weight: bolder;
    text-decoration-line: underline;
    cursor: pointer;

}

.servicesBox img:hover {

    width: 26vw;

}

@media (max-width: 700px) {

    .servicesContainer {

        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        width: 99vw;
        height: 200vh;
        /* margin: 0 auto; */
        /* border: 1px solid red; */
    
    }

    .servicesBox {

        display: flex;
        flex-direction: column;
        line-height: 1.5;
        height: 55vh;
        width: 80vw;
        margin: 0.5em;
        padding: 0.1em .1em 2em;
        text-align: center;
        overflow: hidden;
        font-family: 'Helvetica Neue',sans-serif;
        background-color:rgba(192,192,192,0.53);
        border: 1px solid silver;
     
     }

     .servicesBox img {

        height: 30vh;
        width: 100vw;
        transition: width 1s;
    
    }
    
    .servicesBox img:hover {

        width: 110vw;
    
    }

}

